style.css
/* The navigation bar */

.navbar {
	margin-top: 0px;
	margin-bottom: 10px;
	overflow: hidden;
	background-color: white;
	position: fixed;
	z-index: 1;
	top: 0;
	/* Position the navbar at the top of the page */
	width: 100%;
	/* Full width */
	color: #777486;
}

/* Links inside the navbar */

.navbarLinks {
	float: right;
	display: block;
	text-align: right;
	padding: 14px 16px;
}

a {
	font-size: 15px;
	color: #d29691;
}

h2 {
	font-family: "Lato", sans-serif;
	font-size: 3em;
	opacity: 0.75;
}

h3 {
	opacity: 0.75;
}

body {
	font-family: "Open Sans", sans-serif;
	color: white;
	font-size: 21px;
}

.titleColor {
	font-family: "Lato", sans-serif;
	color: #d29691;
}

.titleWhite {
	font-family: "Lato", sans-serif;
	color: white;
}

.pageOne {
	background: url("http://images.unsplash.com/photo-1471229058801-75ee9a43ef35?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;s=4495ead4b990fc7af3e9c4dec79e556d");
	background-repeat: no-repeat;
	background-position: center center;
	background-attachment: fixed;
	background-size: cover;
	padding: 300px 0;
}

.pageTwo {
	background-color: white;
	padding: 75px 0;
	margin: 0 auto;
}

/* this is for the portfolio. slightly modified from geekgirllife.com */

ul.img-list {
	list-style-type: none;
	margin: 0;
	padding: 0;
	text-align: center;
}

ul.img-list li {
	display: inline-block;
	height: 300px;
	margin: 0 1em 1em 0;
	position: relative;
	width: 300px;
}

/* this is for the text over the images */

span.text-content {
	background: #777486;
	color: white;
	display: table;
	height: 300px;
	left: 0;
	position: absolute;
	top: 0;
	width: 350px;
	opacity: 0;
}

ul.img-list li:hover span.text-content {
	opacity: 0.9;
}

span.text-content span {
	display: table-cell;
	text-align: center;
	vertical-align: middle;
}

.blockBio {
	width: 50%;
	margin: auto;
	color: white;
	opacity: 0.8;
}

.pageThree {
	background-color: #d29691;
	background-size: cover;
	padding: 75px 0;
}

.pageFour {
	background-color: #777486;
	padding: 50px 10px;
	margin: 0 auto;
}

#twittericon,
#githubicon,
#linkedinicon,
#texticon,
#mailicon {
	border-radius: 100%;
	border: solid 2px #d29691;
	font-size: 18px;
	padding: 8px;
	color: #d29691;
}

